--- a/pipemixer.1
+++ b/pipemixer.1
@@ -28,22 +28,28 @@ Display help message and exit.
 
 .SH CONTROLS
 .TP
-.B j, Down arrow
+.B j, Down
 Move down the node list.
 .TP
-.B k, Up arrow
+.B k, Up
 Move up the node list.
 .TP
-.B t, Tab key
-Switch to the node tab.
+.B t, Tab
+Switch to the next tab.
+.TP
+.B T, Shift+Tab
+Switch to the previous tab.
+.TP
+.B 1, 2, 3, 4
+Switch to the 1st, 2nd, 3rd, or 4th tab.
 .TP
 .B m
 Toggle mute for the selected node.
 .TP
-.B l, Right arrow
+.B l, Right
 Increase volume.
 .TP
-.B h, Left arrow
+.B h, Left
 Decrease volume.
 .TP
 .B Space
