feat: recognize all ncurses KEY_... keycodes in config

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -49,17 +49,23 @@ Characters for drawing volume bars.
 .RE
 
 .SH SECTION: binds
-Configure keybindings. Format is action=key. Each action can be bound to multiple keys.
-.br
-Supported keys include:
-.PD 0
+Configure keybindings. Format is action=key. Each action can be bound to multiple keys. Key can be specified in several ways:
 .IP \(bu 4
 All printable ASCII characters.
+.br
+Example: tab-next=t
 .IP \(bu 4
 Special keys: enter, tab, backtab, space, backspace, up, down, right, left.
+.br
+Example: tab-prev=backtab
 .IP \(bu 4
-Arbitrary keycodes with code:N format (where N is decimal keycode).
-.PD
+Any of the predefined key codes listed in \fBcurs_getch\fR(3x), with KEY_ prefix removed.
+.br
+Example: volume-set-50=F5
+.IP \(bu 4
+Arbitrary keycodes with code:N (where N is decimal representation of a keycode).
+.br
+Example: quit=code:185
 
 .PP
 .B focus-down, focus-up
