feat: add volume-{min,max} config options

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -18,6 +18,11 @@ General options.
 .RS 4
 Volume change step in percentage (1 means 1%). Default: 1.
 .RE
+.PP
+.B volume-min, volume-max
+.RS 4
+Max and min volume that can be set with pipemixer. Default: 0, 150.
+.RE
 
 .SH SECTION: interface
 Configure various UI elements.
