feat: add ability to unbind a key

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -83,6 +83,11 @@ Set volume of selected node to N%.
 .RS 4
 Exit application.
 .RE
+.PP
+.B unbind
+.RS 4
+Unbind a key from any action.
+.RE
 
 .SH SECTION: interface
 Configure various UI elements.
