breaking: change config path from config.ini to pipemixer.ini

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -3,9 +3,9 @@
 pipemixer.ini \- configuration file for pipemixer
 
 .SH SYNOPSIS
-$XDG_CONFIG_HOME/pipemixer/config.ini
+$XDG_CONFIG_HOME/pipemixer/pipemixer.ini
 .br
-~/.config/pipemixer/config.ini
+~/.config/pipemixer/pipemixer.ini
 
 .SH DESCRIPTION
 The pipemixer.ini file configures the behavior and appearance of \fBpipemixer\fR(1).
@@ -143,10 +143,10 @@ volume-set-50=5
 
 .SH FILES
 .TP
-.I $XDG_CONFIG_HOME/pipemixer/config.ini
+.I $XDG_CONFIG_HOME/pipemixer/pipemixer.ini
 Configuration file (primary location).
 .TP
-.I ~/.config/pipemixer/config.ini
+.I ~/.config/pipemixer/pipemixer.ini
 Fallback configuration file location.
 
 .SH SEE ALSO
