feat(config): recognize hexadecimal keycodes

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -36,7 +36,8 @@ Special keys: enter, tab, backtab, space, backspace, up, down, right, left.
 .br
 Example: tab-prev=backtab
 .IP \(bu 4
-Arbitrary keycodes with code:N (where N is decimal representation of a keycode).
+Arbitrary keycodes with code:N, where N is a decimal number.
+If N is prefixed with 0x, it is interpreted as hexadecimal instead.
 .br
 Example: quit=code:185
 
