feat(binds): add focus-{first,last}

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -47,6 +47,11 @@ Example: quit=code:185
 Navigate node list.
 .RE
 .PP
+.B focus-first, focus-last
+.RS 4
+Focus first or last node.
+.RE
+.PP
 .B volume-up, volume-down
 .RS 4
 Adjust volume.
