man: update man pages

--- a/man/pipemixer.1
+++ b/man/pipemixer.1
@@ -58,6 +58,15 @@ Decrease volume.
 .B Space
 Toggle channel lock for selected node (affects whether volume changes apply to all channels).
 .TP
+.B p
+Enter port selection mode on nodes that support it.
+.TP
+.B Enter
+Confirm selection.
+.TP
+.B Escape
+Cancel selection.
+.TP
 .B q
 Quit the application.
 
