feat: add config option to wrap around when scrolling
ref #12

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -24,6 +24,11 @@ Volume change step in percentage (1 means 1%). Default: 1.
 .RS 4
 Max and min volume that can be set with pipemixer. Default: 0, 150.
 .RE
+.PP
+.B wraparound
+.RS 4
+Whether scrolling through nodes will continue at the top after reaching the bottom and vice versa. Default: false.
+.RE
 
 .SH SECTION: binds
 Configure keybindings. Format is action=key. Each action can be bound to multiple keys. Key can be specified in several ways:
