feat: config option to specify ports separator string

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -111,6 +111,11 @@ Unbind a key from any action.
 Configure various UI elements.
 
 .PP
+.B ports-separator
+.RS 4
+String that separates ports on nodes that have them.
+.RE
+.PP
 .B border-left, border-right, border-top, border-bottom,
 .br
 .B border-top-left, border-top-right, border-bottom-left, border-bottom-right
