man: update BUGS section

--- a/man/pipemixer.1
+++ b/man/pipemixer.1
@@ -79,6 +79,8 @@ When reporting bugs:
 Provide backtrace with symbols if you experience a crash.
 .IP \(bu 4
 Describe steps necessary to reproduce the issue.
+.IP \(bu 4
+Attach output of pw-dump (note that it will contain currently playing media).
 .PD
 
 .SH SEE ALSO
