fix: rename Ports to Routes everywhere
why did I even call them ports in the first place?

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -87,9 +87,9 @@ Set channel lock for selected node.
 Set volume of selected node to N%.
 .RE
 .PP
-.B select-port
+.B select-route
 .RS 4
-Enter port selection menu on nodes that support it.
+Enter route selection menu on nodes that support it.
 .RE
 .PP
 .B confirm-selection, cancel-selection
@@ -111,9 +111,9 @@ Unbind a key from any action.
 Configure various UI elements.
 
 .PP
-.B ports-separator
+.B routes-separator
 .RS 4
-String that separates ports on nodes that have them.
+String that separates routes on nodes that have them.
 .RE
 .PP
 .B border-left, border-right, border-top, border-bottom,
