feat(config): add tab-order option to specify ordering of tabs in the ui

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -29,6 +29,11 @@ Max and min volume that can be set with pipemixer. Default: 0, 150.
 .RS 4
 Whether scrolling through nodes will continue at the top after reaching the bottom and vice versa. Default: false.
 .RE
+.PP
+.B tab-order
+.RS 4
+Order of tabs in the UI. A comma-separated string of tab names. Default: playback,recording,output-devices,input-devices
+.RE
 
 .SH SECTION: binds
 Configure keybindings. Format is action=key. Each action can be bound to multiple keys. Key can be specified in several ways:
