feat(config): ability to specify which tab will be active on startup
ref #17

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -34,6 +34,11 @@ Whether scrolling through nodes will continue at the top after reaching the bott
 .RS 4
 Order of tabs in the UI. A comma-separated string of tab names. Default: playback,recording,output-devices,input-devices
 .RE
+.PP
+.B default-tab
+.RS 4
+Specifies which tab will be active when pipemixer starts. Default: playback
+.RE
 
 .SH SECTION: binds
 Configure keybindings. Format is action=key. Each action can be bound to multiple keys. Key can be specified in several ways:
