--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -1,11 +1,11 @@
-.TH pipemixer.ini 5 "June 2025" "0.1.0" "File Formats"
+.TH pipemixer.ini 5 "September 2025" "0.2.4" "File Formats"
 .SH NAME
 pipemixer.ini \- configuration file for \fBpipemixer\fR(1)
 
 .SH DESCRIPTION
-The pipemixer.ini file configures the behavior and appearance of \fBpipemixer\fR.
+The pipemixer.ini file configures the behavior and appearance of pipemixer.
 .PP
-\fBpipemixer\fR will search for a configuration file in the following locations:
+pipemixer will look for a configuration file in the following locations:
 .IP \(bu 4
 \fB$XDG_CONFIG_HOME/pipemixer/pipemixer.ini\fR
 .IP \(bu 4
