feat(config): routes-separator, profiles-separator

--- a/man/pipemixer.1
+++ b/man/pipemixer.1
@@ -59,6 +59,9 @@ Toggle channel lock for selected node (affects whether volume changes apply to a
 .B p
 Enter route selection mode on nodes that support it.
 .TP
+.B P
+Enter profile selection mode.
+.TP
 .B Enter
 Confirm selection.
 .TP
