update default.ini + man to include cards in tab-order

--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -32,7 +32,7 @@ Whether scrolling through nodes will continue at the top after reaching the bott
 .PP
 .B tab-order
 .RS 4
-Order of tabs in the UI. A comma-separated string of tab names. Default: playback,recording,output-devices,input-devices
+Order of tabs in the UI. A comma-separated string of tab names. Default: playback,recording,output-devices,input-devices,cards
 .RE
 .PP
 .B default-tab
