chore: update man pages and example config

--- a/man/pipemixer.1
+++ b/man/pipemixer.1
@@ -56,6 +56,9 @@ Decrease volume.
 .B Space
 Toggle channel lock for selected node (affects whether volume changes apply to all channels).
 .TP
+.B D
+Set focused source or sink as default.
+.TP
 .B p
 Enter route selection mode on nodes that support it.
 .TP
