--- a/man/pipemixer.ini.5
+++ b/man/pipemixer.ini.5
@@ -102,6 +102,11 @@ Set channel lock for selected node.
 Set volume of selected node to N%.
 .RE
 .PP
+.B set-default
+.RS 4
+Set focused source or sink as default.
+.RE
+.PP
 .B select-route
 .RS 4
 Enter route selection menu on nodes that support it.
